# cmp

./: Cargo.toml  README.md
client/: Cargo.toml  index.html
client/src/: app.rs  main.rs
client/src/components/: entries.rs  entry.rs  hero.rs  input.rs  mod.rs  progress_bar.rs
client/src/services/: search.rs
domain/: Cargo.toml
domain/src/: item.rs  lib.rs  provider.rs  response.rs
server/: Cargo.toml
server/src/: error.rs  filters.rs  handlers.rs  html_select.rs  main.rs  provider.rs  rate_limit.rs  solver.rs
server/src/filter/: extraction.rs  mod.rs
server/src/select/: mod.rs
server/src/selecting/: selector.rs
server/src/services/: search.rs
server/src/solve/: cookie.rs  solution.rs  solver.rs
server/src/solving/: cookie.rs  mod.rs  solution.rs  solver.rs  solver_response.rs
src/: app.rs  crawl.rs  er.rs  main.rs  price.rs  provider.rs  search.rs  state.rs  urls.rs
src/components/: input.rs
src/domain/: item.rs  mod.rs  provider.rs  state.rs
src/hooks/: mod.rs  use_bool_toggle.rs
src/provider/: alltricks.rs  mod.rs
ssr/: Cargo.toml  index.html
ssr/src/: app.rs  lib.rs
ssr/src/components/: entry.rs  mod.rs
