[package]
name = "cmp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
futures = "0.3.30"
html-escape = "0.2.13"
reqwest = {version = "0.12.3", features = ["cookies"] }
scraper = "0.19.0"
serde_json = "1.0.116"
urlencoding = "2.1.3"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr", "ssr"] }
tokio = { version = "1.37.0", features = ["full"] }
warp = "0.3.7"
web-sys = "0.3.69"
