[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
anyhow = "1.0.82"
futures = "0.3.30"
html-escape = "0.2.13"
reqwest = "0.12.4"
scraper = "0.19.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_derive = "1.0.198"
serde_json = "1.0.116"
time = { version = "0.3.36", features = ["formatting"] }
tokio = { version = "1.37.0", features = ["full"] }
urlencoding = "2.1.3"
warp = "0.3.7"
moka = { version = "0.12.7", features = ["future"] }
