[package]
name = "cmp-ssr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ssr_hydrate"
required-features = ["hydration"]

[[bin]]
name = "ssr_server"
required-features = ["ssr"]

[dependencies]
domain = { path = "../domain" }
yew = { git = "https://github.com/yewstack/yew/" }
reqwest = {version = "0.12.3"}
serde_json = "1.0.116"
anyhow = "1.0.82"
futures = "0.3.30"
html-escape = "0.2.13"
scraper = "0.19.0"
urlencoding = "2.1.3"
web-sys = "0.3.69"
log = "0.4"
bytes = "1.5"
gloo = "0.10.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.37.0", features = ["full"] }
warp = "0.3.7"
clap = { version = "4", features = ["derive"] }

[features]
hydration = ["yew/hydration"]
ssr = ["yew/ssr"]
